- feature: 支持动态代理的 java agent 加载；