@@ -15,8 +15,9 @@ object GradleConfig {
 
     const val WITH_PARAMETERS_ARG = "-parameters"
     const val WITH_ENABLE_PREVIEW_ARG = "--enable-preview"
+    const val WITH_ENABLE_DYNAMIC_AGENT_LOADING = "-XX:+EnableDynamicAgentLoading"
 
     const val ACTIVE_ENVIRONMENT_FIELD_NAME = "activeEnvironmentName"
     var activeEnvironmentName = activeEnvironment.handler.getActiveEnvironmentName()
-    
+
 }
